front-end/src/components/GridProduct/GridProduct.module.css
.grid {
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(3, 420px);
    padding: 10px;
  }
  
  .product-card {
    padding: 20px;
    background-color: #f9f9f9;
    border: 1px solid #ddd;
    text-align: center;
    min-height: 300px;
    height: auto;
  }
  
  .product-image {
    height: auto;
    max-height: auto;
    width: 100%;
    background-color: #f3f3f3;
    margin-bottom: 10px;
    object-fit: cover;
  }
  
  .product-name {
    height: 20px;
    background-color: #f3f3f3;
    margin: 5px 0;
    color: #000;
  }
  .product-price{
    color: #000;
  }
  
  @media (max-width: 768px) {
    .grid {
      grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(3, 420px);
    }
    .product-card {
      width: 200px;
    } 
  }
  

